[package]
name = "pinning"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
tokio = { version = "1.0.0", path = "../tokio", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", path = "../tokio-util", features = ["full"] }
tokio-stream = { version = "0.1", path = "../tokio-stream" }
core_affinity = "0.5"
log = "0.4"
env_logger = "0.8"
